<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_order_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editOrderAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/admin_order_amount"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editOrderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/admin_order_shipping"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerOrderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
